<resources>
    <string name="app_name">ITM INSTITUTE PORTAL</string>
    <string name="str_hint_user_id">Email Id</string>
    <string name="str_hint_password">Password</string>
    <string name="str_forgot_password">Forgot my password?</string>
    <string name="str_hint_select_dept">Select Department</string>
    <string name="str_hint_select_issue">Type Issue</string>
    <string name="str_hint_comments">Comments</string>
    <string name="str_hint_remarks">Remarks</string>
    <string name="str_hint_select_source">Select Your Source</string>
    <string name="str_hint_tell_location">Tell us about the location</string>
    <string name="str_hint_select_commodity">Select The Commodity</string>
    <string name="str_hint_type">Type</string>
    <string name="str_hint_grade">Grade</string>
    <string name="str_hint_price">Price per 100kgs</string>
    <string name="str_hint_lead_type">Lead Type</string>
    <string name="str_hint_phone">Contact Number</string>
    <string name="str_add_business_card">Add Business Card</string>
    <string name="str_hint_starting">Starting</string>
    <string name="str_hint_working_on">What are you working on?</string>
    <string name="str_hint_specific_project">Any Specific Project/Warehouse you want to mention</string>
    <string name="str_hint_name_warehouse">Name Your Warehouse</string>
    <string name="str_hint_location">Tell us the location</string>
    <string name="outOfRangeExceptionMessage"> Time value is out of range. \n "hour" value must be between 0 and 24, "minute" value must be between 0 and 60 </string>
    <string name="outOfRangeExceptionMessage2"> Time value is out of range. \n "hour" value must be between 0 and 12, "minute" value must be between 0 and 60 </string>
    <string name="str_add_document">Add Document</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="dlg_error">Error</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_loading">Loading…</string>
    <string name="dlg_choose_image_from">Select photo from…</string>
    <string name="dlg_retry">Retry</string>
    <string name="please_wait">Please wait…</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="DINNextLTProLight">fonts/DINNextLTPro-Light.otf</string>
    <string name="DINNextLTProMedium">fonts/DINNextLTPro-Medium.otf</string>
    <string name="DINNextLTProRegular">fonts/DINNextLTPro-Regular.otf</string>
    <string name="DINNextLTProUltraLight">fonts/DINNextLTPro-UltraLight.otf</string>
    <string name="DINNextRoundedLTProLight">fonts/DINNextRoundedLTPro-Light.otf</string>
    <string name="DINNextRoundedLTProMedium">fonts/DINNextRoundedLTPro-Medium.otf</string>
    <string name="DINNextRoundedLTProRegular">fonts/DINNextRoundedLTPro-Regular.otf</string>
    <string name="GothamSSmBold">fonts/GothamSSm-Bold.otf</string>
    <string name="GothamSSmBook">fonts/GothamSSm-Book.ttf</string>
    <string name="GothamSSmBlack">fonts/Gotham-Black.ttf</string>
    <string name="GothamSSmLight">fonts/GothamSSm-Light.ttf</string>
    <string name="GothamSSmMedium">fonts/GothamSSm-Medium.ttf</string>
    <string name="GothamBlack">fonts/Gotham-Black.ttf</string>
    <string name="GothamLight">fonts/Gotham-Light.otf</string>
    <string name="GothamMedium">fonts/Gotham-Medium.ttf</string>
    <string name="GothamBook">fonts/Gotham-Book.ttf</string>
    <string name="GothamLightItalic">fonts/Gotham-LightItalic.otf</string>
    <string name="RobotoBold">fonts/Roboto/Roboto-Bold.ttf</string>
    <string name="RobotoLight">fonts/Roboto/Roboto-Light.ttf</string>
    <string name="RobotoMedium">fonts/Roboto/Roboto-Medium.ttf</string>
    <string name="RobotoThin">fonts/Roboto/Roboto-Thin.ttf</string>
    <string name="RobotoRegular">fonts/Roboto/Roboto-Regular.ttf</string>
    <string name="RobotoItalic">fonts/Roboto/Roboto-Italic.ttf</string>
    <string name="crop_image_activity_title">Select Image</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">SAVE</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="went_wrong">Something went wrong</string>
    <string name="could_not_connect">Could not connect to server</string>
    <string name="invalid_email">Invalid Email Id</string>
    <string name="invalid_password">Incorrect Password</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="chairmans_message">As John F Kennedy (35 President of USA) once said “Our progress as a nation can be no swifter than our progress in education. The human mind is our fundamental resource.” It gives me an immense sense of honor , pride and happiness to open the gates for a world class education institution in the brass city of Aligarh ITM!

ITM Aligrah has emerged and evolved from the widely acknowledged group of institutions viz; Institute of technology and management (ITM). The aim of the institution is to translate knowledge into practice so that quality professionals, teachers and researchers can be produced and offered to society at large. ITM Aligarh aspires to create a platform where the business driven city of Aligarh can transform into an educational hab by providing the world class facilities and infrastructure. With the aim of stopping the brain from our city, ITM Aligarh wants to adopt a “Global” approach where the best global practices in the field of education will be implemented by understanding the Local opportunities and challenges.

I am proud of what we have achieved within a short period of time and look at the future with optimism and confidence. I urge you to join us, and witness for yourself how this Institute is an institution with a difference. I am sure that the time you spend here will not only be rewarding but memorable for you. I welcome you to join and experience the uniqueness of the ITM Aligarh.</string>
    <string name="secretery_message"> ITM is not merely other educational institution, it is a symbol of ethos, the principal we stand for and deep rooted cultural values. It is the manifestation of morals that are dear to us.

Our enthusiastic team of Management is strong in its conviction and highly motivated and eager to pass the same to the students and faculty. Every year the stupendous performance by our student is a testimony of the untiring efforts of faculty, students and management members. These achivements are constantly reminding us of onerous responsibility shouldered on us by the parents and students. Today, our students can be seen making wonderful progress in their chosen careers.

At this juncture, we rededicate ourselves and it is our constant endeavor to strive to upgrade the teaching and learing facilities and infrastructure that are conducive to stimulative academic environment.</string>
    <string name="treasurer_message"> The motive of ITM Aligarh is to develop a gobal perspective to cope –up with the fast changing technology scenario. In addition to this, values with discipline are the hallmark of our college, besides, ensuring quality of the students; here the emphasis is not only on academic excellence but the development of the overall total personality of a student. To achieve this goal, add on courses, training in personality development, and other soft skills are also provided in our College. We take special care to ensure that new ideas are not merely discussed here but executed. Execution of new ideas helps the faculty and students to tread the path of ‘innovation’ which is the slogan of our Institution. As excellence is the only criterion for selection of students, we are confident that in due course, promises will become ‘Achievements’ in their respective fields.

I am delighted that ITM Aligarh has published the College Souvenir-2011. The Editorial board has done a fair job to put up facts before students and parent community. To express one’s thought, College Magazine is the best platform and this is what our students have expressed in terms of contributions towards the magazine. I congratulate Editorial Board for unleashing the potential of the students and making a chapter of ITM Aligarh history.</string>
    <string name="btech_first">The seats will be filled based on UPSEEE/AIEEE merit list Vacant And Management Seat through Direct admission trough UPTU counseling. Candidate should have passed 10+2 examination with Phaysics and Mathematics as compulsory subjects along with one of the chemistry/Biotechnology/Biology And Obtained at last 50% marks 45% in case of candidate belonging to SC/ST category) in the above subjects taken together.</string>
    <string name="btech_lateral_entry">The Seats will be filled based on UPTU merit list through counseling Vacant And Management Seat through Direct admission The candidates has passed three year polytechnic diploma from an AICTE approved in institution or B.Sc. degree from a university defined by UGC with at leatest 50% marks (45% in case of candidate belonging to SC/ST).</string>
    <string name="mtech">The seats will be filled based on UPSEEE/AIEEE merit list Vacant And Management Seat through Direct admission trough UPTU counseling. Candidate should have passed 10+2 examination with Phaysics and Mathematics as compulsory subjects along with one of the chemistry/Biotechnology/Biology And Obtained at last 50% marks 45% in case of candidate belonging to SC/ST category) in the above subjects taken together.</string>
    <string name="admission_eligiblity">Placement Call @ ITM ITM students have high career placement, whether you want to be an engineer or a manager, our placement team helps you to polish your resume, get lucrative internships, and connect you with employers.

Acting as an interface between the industry and the students, our placement team plays an important role in honing students’ over all personality by arranging seminars, mock GDs and interviews, workshops, industrial training and industrial visits. The goal is to increase students’ employability</string>
    <string name="industry_interaction">Every student undergoes Industrial training for duration of 5 week This helps in giving them real industry exposure. Industry interaction is done through guest lectures and industrial visits for bridging the gap between the theoretical and practical aspects of the curriculum.</string>
</resources>