<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF2E9"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header_view"
        style="@style/MatchWidth"
        android:background="@color/status_red"
        android:elevation="6dp"
        android:orientation="horizontal">

        <com.example.abc.itmcollegealigarh.view.MaterialRippleLayout
            style="@style/WrapContent"
            app:mrl_rippleOverlay="true">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_navigation"
                android:tint="@color/black"
                style="@style/WrapContent"
                app:tint="@color/white"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_left_arrow"
                android:padding="15dp" />
        </com.example.abc.itmcollegealigarh.view.MaterialRippleLayout>

        <LinearLayout
            style="@style/WrapContent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.example.abc.itmcollegealigarh.view.TextViewPlus
                android:id="@+id/tv_header_title"
                style="@style/WrapContent"
                android:padding="15dp"
                android:text="Treasurer's Message"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:customFont="@string/GothamMedium" />

        </LinearLayout>

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView style="@style/MatchWidth">

        <LinearLayout
            style="@style/MatchWidth"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/tmpic"
                android:layout_height="200dp" />

            <android.support.v4.widget.NestedScrollView
                style="@style/MatchWidth">

                <LinearLayout
                    style="@style/MatchWidth"
                    android:orientation="vertical">
                    <com.example.abc.itmcollegealigarh.view.TextViewPlus
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/cobalt_black"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="20dp"
                        android:lineSpacingExtra="5dp"
                        android:ellipsize="end"
                        android:singleLine="false"
                        app:customFont="@string/GothamBook"
                        android:text="@string/treasurer_message"
                        />

                    <com.example.abc.itmcollegealigarh.view.TextViewPlus
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/cobalt_black"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:ellipsize="end"
                        android:textSize="16dp"
                        android:singleLine="false"
                        app:customFont="@string/GothamMedium"
                        android:text="Dinkal Agarwal"
                        />

                    <com.example.abc.itmcollegealigarh.view.TextViewPlus
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/cobalt_black"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:ellipsize="end"
                        android:textSize="16dp"
                        android:singleLine="false"
                        app:customFont="@string/GothamMedium"
                        android:text="Treasurer"
                        android:layout_marginBottom="20dp"
                        />





                </LinearLayout>


            </android.support.v4.widget.NestedScrollView>





        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
